# mini_rust_desk_server

./: .env  Cargo.toml  build.rs
src/: common.rs  ipc.rs  lib.rs  main.rs  rendezvous_mediator.rs  server.rs
src/platform/: mod.rs  win_device.rs  windows.cc  windows.rs
