[package]
name = "mini_rust_desk_server"
version = "0.1.0"
edition = "2021"


[dependencies]
mini_rust_desk_common = { git = "https://github.com/SwartzMss/mini_rust_desk_common", rev = "31e2d32cf1dff1896f8523e49b334af1137c3b0e"}
scrap = { git = "https://github.com/SwartzMss/mini_rust_desk_scrap", rev = "2cdda537fc39918a96dae33bb210288cb1972708"}
flexi_logger = { version = "0.22", features = ["async", "use_chrono_for_offset", "dont_minimize_extra_stacks"] }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
clap = "2"
uuid = { version = "1.3", features = ["v4"] }
anyhow = "1.0"
bytes = { version = "1.6", features = ["serde"] }
rand = "0.8"
whoami = "1.1"
sodiumoxide = "0.2"
regex = "1.8"
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { git = "https://github.com/rustdesk-org/reqwest", features = ["blocking", "socks", "json", "native-tls", "gzip"], default-features=false }
confy = { git = "https://github.com/rustdesk-org/confy" }
machine-uid = { git = "https://github.com/rustdesk-org/machine-uid" }
base64 = "0.22"
dirs-next = "2.0"
directories-next = "2.0"
mac_address = "1.1"
parity-tokio-ipc = { git = "https://github.com/rustdesk-org/parity-tokio-ipc" }
rust-ini = "0.18"
sha2 = "0.10"
shared_memory = "0.12"
winres = "0.1"
winapi = { version = "0.3", features = [
    "winuser",
    "wincrypt",
    "shellscalingapi",
    "pdh",
    "synchapi",
    "memoryapi",
    "shellapi",
    "devguid",
    "setupapi",
    "cguid",
    "cfgmgr32",
    "ioapiset",
] }
winreg = "0.11"
windows-service = "0.6"
arboard = { git = "https://github.com/rustdesk-org/arboard", features = ["wayland-data-control"] }
wallpaper = { git = "https://github.com/rustdesk-org/wallpaper.rs" }
runas = "1.2"


[build-dependencies]
cc = "1.0"